Minor changes, queue reordering.

--- a/theme/layout/tag.phtml
+++ b/theme/layout/tag.phtml
@@ -1,5 +1,5 @@
 <li class="entry-item">
-    <p class="entry-title"><a href="/{{tag slug}}">{{tag title}}</a></p>
-    <div class="entry-image"><a href="/{{tag slug}}" title="{{tag title}}"><img src="{{tag thumb}}" alt="{{tag title}}"/></a></div>
+    <p class="entry-title"><a href="{{tag url}}">{{tag title}}</a></p>
+    <div class="entry-image"><a href="{{tag url}}" title="{{tag title}}"><img src="{{tag thumb}}" alt="{{tag title}}"/></a></div>
     <p class="entry-date">{{tag count}}</p>
 </li>
