--- a/theme/includes/head.phtml
+++ b/theme/includes/head.phtml
@@ -3,8 +3,8 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>{{title}}Desktop Backgrounds | Spartacus Wallpaper</title>
-  <link href="/css/global.css" media="screen" rel="stylesheet" type="text/css" />
-  <link href="/css/banner.css" media="screen" rel="stylesheet" type="text/css" />
+  <link href="{{baseurl}}css/global.css" media="screen" rel="stylesheet" type="text/css" />
+  <link href="{{baseurl}}css/banner.css" media="screen" rel="stylesheet" type="text/css" />
   <link rel="shortcut icon" href="/favicon.ico">
   <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
   <script type="text/javascript">
@@ -15,4 +15,5 @@
   	});
   //]]>
   </script>
+  {{head}}
 </head>
