--- a/theme/includes/header.phtml
+++ b/theme/includes/header.phtml
@@ -1,11 +1,11 @@
 <div class="header-banner">
 	<div class="logo">
-		<a href="/"><img src="/images/logo.png" alt="Spartacus Wallpaper" /></a>
+		<a href="{{baseurl}}"><img src="{{baseurl}}images/logo.png" alt="Spartacus Wallpaper" /></a>
 		<ul class="top-nav">
-			<li><a href="/page/about">about</a></li>
-			<li><a href="/page/tags">tags</a></li>
-			<li><a href="/page/contact">contact</a></li>
-			<li><a href="/page/donate">donate</a></li>
+			<li><a href="{{baseurl}}page/about">about</a></li>
+			<li><a href="{{baseurl}}page/tags">tags</a></li>
+			<li><a href="{{baseurl}}page/contact">contact</a></li>
+			<li><a href="{{baseurl}}page/donate">donate</a></li>
 		</ul>
 	</div>
 </div>
