--- a/theme/layout/entry_home.phtml
+++ b/theme/layout/entry_home.phtml
@@ -6,7 +6,7 @@
 ?>
 
 <div class="entry-view">
-	<h2 class="entry-title"><a href="/{{entry url_path}}" title="{{entry title}}">{{entry title}}</a></h2>
+	<h2 class="entry-title"><a href="{{entry url}}" title="{{entry title}}">{{entry title}}</a></h2>
 	<p class="entry-date">{{entry published_at}}</p>
 	<a href="{{entry url_path}}" class="entry-preview-image" title="{{entry title}}">
         <img src="{{entry preview}}" alt="{{entry title}}"/>
