--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,3 +1,8 @@
+/**
+ * @author		Dennis Rogers
+ * @address		www.drogers.net
+ */
+
 .content {
     float:left;
     margin:15px 0 15px 15px;
@@ -42,7 +47,7 @@ margin:0;
 }
 
 .entry-preview-image img {
-	width:690px;
+    width:100%;
 }
 
 .entry-versions,
@@ -63,10 +68,12 @@ margin:0;
 }
 
 .header-banner {
-border:10px solid #B44E0A;
-height:140px;
-padding:10px;
-width:910px;
+    border:10px solid #B44E0A;
+    height:140px;
+    padding:10px;
+    background-position: 50% 50%;
+    background-size: cover;
+    position: relative;
 }
 
 .ad-top {
@@ -84,13 +91,14 @@ width:910px;
 }
 
 .logo {
-height:140px;
-position:relative;
-width:340px;
+    height:140px;
+    position:absolute;
+    left: 10px;
+    width:340px;
 }
 
 .right .logo {
-	margin-left: 566px;
+	right:10px;
 }
 
 .social-media {
@@ -127,9 +135,8 @@ width:340px;
     color:#949A72;
     float:right;
     font-family:Helvetica;
-    margin:15px 15px 15px 0;
+    margin:15px 0 0;
     padding:35px 8px 8px;
-    width:144px;
 }
 
 .sidebar .social-contact li {
@@ -152,15 +159,22 @@ width:340px;
 
 .sidebar-head,
 .content-head {
-	background: url(../images/header-narrow.jpg) 0 0 no-repeat;
+    background: #535d2a; /* Old browsers */
+    background: -moz-linear-gradient(45deg,  #535d2a 1%, #3e4717 51%, #4e5827 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left bottom, right top, color-stop(1%,#535d2a), color-stop(51%,#3e4717), color-stop(100%,#4e5827)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(45deg,  #535d2a 1%,#3e4717 51%,#4e5827 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(45deg,  #535d2a 1%,#3e4717 51%,#4e5827 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(45deg,  #535d2a 1%,#3e4717 51%,#4e5827 100%); /* IE10+ */
+    background: linear-gradient(45deg,  #535d2a 1%,#3e4717 51%,#4e5827 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#535d2a', endColorstr='#4e5827',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+
+    border-top: solid 1px #4C5626;
+    border-bottom: solid 1px #3E4425;
 	width:100%;
 	height:20px;
 	position: absolute;
 	top:0;
 	left:0;
-}
-.content-head {
-	background:#2F3519 url(../images/header-wide.jpg) 0 0 no-repeat;
 }
 
 .sidebar .section-head {
@@ -203,8 +217,6 @@ padding:2px 0 12px 5px;
 
 .entry-grid .entry-item {
 	float:left;
-	width: 200px;
-	padding: 15px;
 }
 
 .entry-grid .entry-title {
@@ -220,6 +232,10 @@ padding:2px 0 12px 5px;
 
 .entry-grid .entry-date {
 	font-size:13px;
+}
+
+.entry-grid .entry-image img {
+    width: 100%;
 }
 
 .top-nav {
@@ -258,12 +274,12 @@ overflow:auto;
 padding: 5px;
 }
 
-.wrapper-outer {
+.container-narrow {
 background:none repeat scroll 0 0 #2D2F02;
 margin:0 auto;
 overflow:auto;
 padding:20px;
-width:950px;
+max-width:1008px;
 }
 
 .no-display {
@@ -327,3 +343,23 @@ td {
 	border: 1px solid #757d56;
 	padding: 1px 5px;
 }
+@media screen and (max-width: 475px) {
+    body {
+        padding:0;
+    }
+    .container-narrow {
+        margin: 0;
+        padding: 0;
+    }
+    .header-banner {
+        border: none;
+        margin: 0 0 0 -15px;
+        padding:0
+    }
+    .logo {
+        margin: 0 auto;
+        position: relative;
+    }
+}
+
+
