--- a/theme/includes/header.phtml
+++ b/theme/includes/header.phtml
@@ -1,11 +1,15 @@
-<div class="header-banner">
-	<div class="logo">
-		<a href="{{baseurl}}"><img src="{{baseurl}}images/logo.png" alt="Spartacus Wallpaper" /></a>
-		<ul class="top-nav">
-			<li><a href="{{baseurl}}page/about">about</a></li>
-			<li><a href="{{baseurl}}page/tags">tags</a></li>
-			<li><a href="{{baseurl}}page/contact">contact</a></li>
-			<li><a href="{{baseurl}}page/donate">donate</a></li>
-		</ul>
-	</div>
+<div class="header-banner banner-border">
+    <div class="header-banner banner-background">
+        <div class="header-banner banner-feature">
+        	<div class="logo">
+        		<a href="{{baseurl}}"><img src="{{baseurl}}images/logo.png" alt="Spartacus Wallpaper" /></a>
+        		<ul class="top-nav">
+        			<li><a href="{{baseurl}}page/about">about</a></li>
+        			<li><a href="{{baseurl}}page/tags">by name</a></li>
+        			<li><a href="{{baseurl}}page/contact">contact</a></li>
+        			<li><a href="{{baseurl}}page/donate">donate</a></li>
+        		</ul>
+        	</div>
+        </div>
+    </div>
 </div>
