--- a/theme/index.phtml
+++ b/theme/index.phtml
@@ -1,15 +1,14 @@
 {{entry_first}}
 	<div class="ad-middle">
-		<script type="text/javascript"><!--
-		google_ad_client = "pub-9622612302631221";
-		/* 728x90, created 12/30/09 */
-		google_ad_slot = "7751544997";
-		google_ad_width = 728;
-		google_ad_height = 90;
-		//-->
-		</script>
-		<script type="text/javascript"
-		src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-		</script>
+        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <!-- Content Top -->
+        <ins class="adsbygoogle"
+             style="display:block"
+             data-ad-client="ca-pub-9622612302631221"
+             data-ad-slot="8363371851"
+             data-ad-format="auto"></ins>
+        <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
 	</div>
 {{entries}}
