--- a/theme/includes/sidebar.phtml
+++ b/theme/includes/sidebar.phtml
@@ -1,14 +1,14 @@
 <div class="sidebar">
 	<div class="sidebar-head"></div>
-	<p class="section-head">Wallpapers:</p>
+	<p class="section-head">Wallpapers by Type:</p>
 	<ul>
     {{kinds}}
 	</ul>
-	<p class="section-head">Archive by Year:</p>
+	<p class="section-head">Wallpapers by Year:</p>
 	<ul class="years">
     {{tag_years}}
 	</ul>
-	<p class="section-head">Top 20:</p>
+	<p class="section-head">Top 20 Names:</p>
 	<ul>
     {{tag_20}}
 	</ul>
