--- a/theme/index.phtml
+++ b/theme/index.phtml
@@ -1,4 +1,5 @@
 {{entry_first}}
+{{entry_first_mobile}}
 	<div class="ad-middle">
         <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
         <!-- Content Top -->
