--- a/theme/layout/tag.phtml
+++ b/theme/layout/tag.phtml
@@ -1,5 +1,6 @@
-<div class="entry-item span4">
+<div class="{{tag classes}}">
     <p class="entry-title"><a href="{{tag slug}}">{{tag title}}</a></p>
-    <div class="entry-image"><a href="{{tag slug}}" title="{{tag title}}"><img src="{{tag thumb}}" alt="{{tag title}}"/></a></div>
-    <p class="entry-date">{{tag count}}</p>
+    <div class="entry-image hidden-xs"><a href="{{tag slug}}" title="{{tag title}}"><img src="{{tag thumb}}" alt="{{tag title}}"/></a></div>
+    {{tag mobile_images}}
+    <p class="entry-date">{{tag date}}</p>
 </div>
