--- a/theme/includes/head.phtml
+++ b/theme/includes/head.phtml
@@ -2,13 +2,14 @@
 <html xmlns:fb="http://ogp.me/ns/fb#">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{title}}Desktop Backgrounds | Spartacus Wallpaper</title>
-    <link href="{{baseurl}}css/bootstrap.2.2.2.min.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href="{{baseurl}}css/bootstrap.min.css" media="screen" rel="stylesheet" type="text/css" />
     <link href="{{baseurl}}css/custom.css" media="screen" rel="stylesheet" type="text/css" />
     <link href="{{baseurl}}css/banner.css" media="screen" rel="stylesheet" type="text/css" />
     <link rel="shortcut icon" href="/favicon.ico">
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="{{baseurl}}js/custom.js"></script>
     <script src="{{baseurl}}js/banner.js"></script>
     <script type="text/javascript">
     //<![CDATA[
