--- a/theme/layout/default.phtml
+++ b/theme/layout/default.phtml
@@ -1,9 +1,9 @@
 {{include head.phtml}}
 <body>
-	<div class="container-narrow">
+	<div class="container-fluid">
     {{include header.phtml}}
 		<div class="row-fluid">
-			<div class="content span9">
+			<div class="col-md-9" id="main">
 				<div class="content-head"></div>
 				<div class="ad-top">
                     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -32,7 +32,7 @@
                     </script>
 				</div>
 			</div>
-			<div class="span3" id="sidebar">
+			<div class="col-md-3" id="sidebar">
                 {{include sidebar.phtml}}
                 {{include ad-sidebar.phtml}}
 			</div>
