--- a/theme/includes/header.phtml
+++ b/theme/includes/header.phtml
@@ -5,7 +5,7 @@
         		<a href="{{baseurl}}"><img src="{{baseurl}}images/logo.png" alt="Spartacus Wallpaper" /></a>
         		<ul class="top-nav">
         			<li><a href="{{baseurl}}page/about">about</a></li>
-        			<li><a href="{{baseurl}}page/tags">by name</a></li>
+        			<li><a href="{{baseurl}}page/tags">names</a></li>
         			<li><a href="{{baseurl}}page/contact">contact</a></li>
         			<li><a href="{{baseurl}}page/donate">donate</a></li>
         		</ul>
