--- a/theme/includes/head.phtml
+++ b/theme/includes/head.phtml
@@ -3,6 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    {{head}}
     <title>{{title}}Desktop Backgrounds | Spartacus Wallpaper</title>
     <link href="{{baseurl}}css/bootstrap.min.css" media="screen" rel="stylesheet" type="text/css" />
     <link href="{{baseurl}}css/custom.css" media="screen" rel="stylesheet" type="text/css" />
@@ -16,7 +17,6 @@
     	jQuery(document).ready(function(){
         	if(window.getComputedStyle == undefined || window.getComputedStyle(document.body).backgroundBlendMode == undefined)
         		jQuery('.header-banner.banner-border').css('background-image', 'none');
-
         });
     //]]>
     </script>
