fix head tags, calendar sidebar

--- a/theme/includes/header.phtml
+++ b/theme/includes/header.phtml
@@ -2,7 +2,9 @@
     <div class="header-banner banner-background">
         <div class="header-banner banner-feature">
         	<div class="logo">
-        		<a href="{{baseurl}}"><img src="{{baseurl}}images/logo.png" alt="Spartacus Wallpaper" /></a>
+        		<a href="{{baseurl}}">
+            		<img src="{{baseurl}}images/logo.png" alt="Spartacus Wallpaper" />
+                </a>
         		<ul class="top-nav">
         			<li><a href="{{baseurl}}page/about">about</a></li>
         			<li><a href="{{baseurl}}page/tags">names</a></li>
