--- a/theme/layout/entry.phtml
+++ b/theme/layout/entry.phtml
@@ -26,7 +26,7 @@
     	<div class="social-media pull-right">
     		<h4>Share</h4>
             <ul>
-                <li><a class="facebook" href="https://www.facebook.com/sharer/sharer.php?u={{entry url}}&title={{entry title}}">Share</a></li>
+                <li><a class="facebook" href="javascript:share();">Share</a></li>
                 <li><a class="twitter" href="http://twitter.com/intent/tweet?url={{entry url}}&text={{entry title}}+-+{{entry preview}}&hashtags=wallpaper,background">Tweet</a></li>
                 <li><a class="pinterest" href="http://pinterest.com/pin/create/bookmarklet/?media={{entry preview}}&url={{entry url}}&is_video=false&description={{entry title}}">Pin</a></li>
             </ul>
