--- a/theme/includes/ad-sidebar.phtml
+++ b/theme/includes/ad-sidebar.phtml
@@ -1,4 +1,4 @@
-<div class="ad-sidebar">
+<div class="ad">
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- Content Sidebar -->
     <ins class="adsbygoogle"
@@ -9,4 +9,7 @@
     <script>
     (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
+</div>
+<div class="random-entries hidden-sm">
+    {{side_more}}
 </div>
