--- a/theme/layout/default.phtml
+++ b/theme/layout/default.phtml
@@ -6,7 +6,7 @@
 			<div class="col-md-9">
     			<div id="main">
     				<div class="content-head"></div>
-    				<div class="ad-top">
+    				<div class="ad top">
                         <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                         <!-- Content Top -->
                         <ins class="adsbygoogle"
@@ -20,7 +20,7 @@
     				</div>
     				<h2 class="content-title">{{content_title}}</h2>
                     {{content}}
-    				<div class="ad-bottom">
+    				<div class="ad bottom">
                         <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                         <!-- Content Bottom -->
                         <ins class="adsbygoogle"
@@ -41,9 +41,6 @@
     			<div id="sidebar">
                     {{include sidebar.phtml}}
                     {{include ad-sidebar.phtml}}
-                    <div class="random-entries entry-grid row hidden-sm">
-                        {{side_more}}
-                    </div>
     			</div>
 			</div>
 		</div>
