--- a/theme/includes/long-ad-sidebar.phtml
+++ b/theme/includes/long-ad-sidebar.phtml
@@ -1,4 +1,4 @@
-<div class="ad-sidebar">
+<div class="ad">
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- Content Sidebar -->
     <ins class="adsbygoogle"
@@ -10,7 +10,10 @@
     (adsbygoogle = window.adsbygoogle || []).push({});
     </script>   
 </div>
-<div class="ad-sidebar long">
+<div class="random-entries hidden-sm">
+    {{side_more}}
+</div>
+<div class="ad long">
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- Content Sidebar -->
     <ins class="adsbygoogle"
