--- a/theme/layout/entry.phtml
+++ b/theme/layout/entry.phtml
@@ -11,7 +11,7 @@
         <span class="visible-xs">Desktop</span>
     </a>
 	<p class="entry-content">{{entry content}}</p>
-	<div class="row-fluid">
+	<div class="row">
 <!--
     	<div class="entry-versions col-sm-5 col-xs-12">
     		<h4>Versions</h4>
@@ -20,10 +20,10 @@
     		</ul>
     	</div>
 -->
-    	<div class="entry-tags pull-left">
+    	<div class="entry-tags pull-left col-xs-12 col-sm-7">
             {{entry tags}}
     	</div>
-    	<div class="social-media pull-right">
+    	<div class="social-media pull-right col-xs-12 col-sm-5">
     		<h4>Share</h4>
             <ul>
                 <li><a class="facebook" href="javascript:share();">Share</a></li>
