Fix ad formats and no-ad js

--- a/theme/includes/head.phtml
+++ b/theme/includes/head.phtml
@@ -12,6 +12,7 @@
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="{{baseurl}}js/custom.js"></script>
     <script src="{{baseurl}}js/banner.js"></script>
+    <script src="{{baseurl}}js/ad.js"></script>
     <script type="text/javascript">
     //<![CDATA[
     	jQuery(document).ready(function(){
