Added changelog functionality.

--- a/theme/includes/sidebar.phtml
+++ b/theme/includes/sidebar.phtml
@@ -1,5 +1,6 @@
 <div class="sidebar">
 	<div class="sidebar-head"></div>
+	<p><a href="{{baseurl}}changelog">Change Log</a></p>
 	<p class="section-head">Calendar Series:</p>
 	<div class="row">
     {{calendar}}
