--- a/theme/includes/long-ad-sidebar.phtml
+++ b/theme/includes/long-ad-sidebar.phtml
@@ -10,7 +10,7 @@
     (adsbygoogle = window.adsbygoogle || []).push({});
     </script>   
 </div>
-<div class="random-entries hidden-sm">
+<div class="random-entries visible-md">
     {{side_more}}
 </div>
 <div class="ad long">
