--- a/theme/layout/default.phtml
+++ b/theme/layout/default.phtml
@@ -20,6 +20,9 @@
     				</div>
     				<h2 class="content-title">{{content_title}}</h2>
                     {{content}}
+                    <nav class="pager">
+                    {{pager}}
+                    </nav>
     				<div class="ad bottom">
                         <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                         <!-- Content Bottom -->
