--- a/theme/layout/entry.phtml
+++ b/theme/layout/entry.phtml
@@ -7,7 +7,7 @@
 	<h2 class="entry-title">{{entry title}}</h2>
 	<p class="entry-date">{{entry published_at}}</p>
 	<a href="{{entry first_image}}" class="entry-preview-image" title="{{entry title}}">
-        <img src="{{entry first_image}}" alt="{{entry title}}"/>
+        <img src="{{entry preview}}" alt="{{entry title}}"/>
         <span class="visible-xs">Desktop</span>
     </a>
 	<p class="entry-content">{{entry content}}</p>
