various fixes for fullscreen only wallpaper, update phpliteadmin

--- a/theme/layout/entry.phtml
+++ b/theme/layout/entry.phtml
@@ -10,7 +10,7 @@
         <img src="{{entry preview}}" alt="{{entry title}}"/>
         <span class="visible-xs">Desktop</span>
     </a>
-	<p class="entry-content">{{entry content}}</p>
+	<div class="entry-content">{{entry content}}</div>
 	<div class="row">
 <!--
     	<div class="entry-versions col-sm-5 col-xs-12">
