--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -114,7 +114,7 @@ padding-bottom: 5px;
 .logo {
     height: 134px;
     position: absolute;
-    left: 10px;
+    left: 3px;
     top: 3px;
     width:340px;
     background-color: rgb(180,78,0);
@@ -428,13 +428,9 @@ td {
     }
 }
 @media screen and (min-width: 768px) {
-    .entry-grid .entry-item {
-        width:32%;
-        margin-left:2%;
-    }
-    .entry-grid .entry-item:nth-of-type(3n+1) {
+    .entry-grid .col-sm-6:nth-of-type(2n+1),
+    .entry-grid .col-sm-4:nth-of-type(3n+1) {
     	clear:left;
-    	margin-left:0;
     }
     .entry-view .entry-images {
         margin-top:-15px;
