--- a/theme/layout/entry_head.phtml
+++ b/theme/layout/entry_head.phtml
@@ -4,12 +4,12 @@
 <meta name="twitter:site" content="@spartacuswalls">
 <meta name="twitter:creator" content="@spartacuswalls">
 <meta name="twitter:title" content="{{entry title}}">
-<meta name="twitter:description" content="{{entry content}}">
+<meta name="twitter:description" content="{{entry short_content}}">
 <meta name="twitter:image:src" content="{{entry preview}}">
 
 <meta property="og:type" content="article" />
 <meta property="og:title" content="{{entry title}}" />
 <meta property="og:site_name" content="Spartacus Wallpaper"/>
 <meta property="og:url" content="{{entry url}}" />
-<meta property="og:description" content="{{entry content}}" />
+<meta property="og:description" content="{{entry short_content}}" />
 <meta property="og:image" content="{{entry preview}}" />
